@@ -21,6 +21,7 @@ import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
+import uk.gov.hmcts.reform.civil.model.search.PaginatedQuery;
 import uk.gov.hmcts.reform.civil.model.search.Query;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.service.data.UserAuthContent;
@@ -37,6 +38,7 @@ import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.CMC_CASE_TYPE;
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.GENERALAPPLICATION_CASE_TYPE;
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.JURISDICTION;
+import static uk.gov.hmcts.reform.civil.utils.CaseServiceUtil.getCaseServiceId;
 
 @Service
 @Slf4j
@@ -79,11 +81,14 @@ public class CoreCaseDataService {
                                               String eventSummary,
                                               String eventDescription) {
 
+        StartEventResponse startEventResponse = startUpdate(caseId.toString(), eventName);
+        CaseData caseData = caseDetailsConverter.toCaseData(startEventResponse.getCaseDetails());
         List<LocationRefData> locationRefDataList = referenceDataService.getCourtLocationsByEpimmsId(
             getSystemUpdateUser().getUserToken(),
-            epimdsId
+            epimdsId,
+            getCaseServiceId(caseData.getCaseAccessCategory())
         );
-        LocationRefData locationRefData = locationRefDataList.get(0);
+        LocationRefData locationRefData = locationRefDataList.getFirst();
 
         DynamicListElement dynamicListElement = new DynamicListElement();
         dynamicListElement.setCode(UUID.randomUUID().toString());
@@ -91,9 +96,6 @@ public class CoreCaseDataService {
 
         DynamicList transferCourtLocationList = new DynamicList();
         transferCourtLocationList.setValue(dynamicListElement);
-
-        StartEventResponse startEventResponse = startUpdate(caseId.toString(), eventName);
-        CaseData caseData = caseDetailsConverter.toCaseData(startEventResponse.getCaseDetails());
 
         caseData.setTransferCourtLocationList(transferCourtLocationList);
         caseData.setReasonForTransfer(transferReason);
@@ -194,6 +196,13 @@ public class CoreCaseDataService {
         String userToken = userService.getAccessToken(userConfig.getUserName(), userConfig.getPassword());
         String searchString = query.toString();
         log.info("Searching Elasticsearch with query: " + searchString);
+        return coreCaseDataApi.searchCases(userToken, authTokenGenerator.generate(), CASE_TYPE, searchString);
+    }
+
+    public SearchResult searchCasesPaginated(PaginatedQuery paginatedQuery) {
+        String userToken = userService.getAccessToken(userConfig.getUserName(), userConfig.getPassword());
+        String searchString = paginatedQuery.getJsonString(mapper);
+        log.info("Searching Elasticsearch with paginated query: " + searchString);
         return coreCaseDataApi.searchCases(userToken, authTokenGenerator.generate(), CASE_TYPE, searchString);
     }
 
